force-app/main/default/objects/psa_Print__c/psa_Print__c.object-meta.xml
<CustomObject>
    <description>Prints for a project</description>
    <label>Print</label>
    <nameField>
        <label>Print Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>