force-app/main/default/objects/psa_Print__c/fields/Actual_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Minutes__c</fullName>
    <description>Actual number of minutes for a print</description>
    <label>Actual Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>