force-app/main/default/objects/psa_Print__c/fields/Brim__c.field-meta.xml
<CustomField>
    <fullName>Brim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a print needs a brim to improve bed adhesion.</description>
    <label>Brim</label>
    <type>Checkbox</type>
</CustomField>