force-app/main/default/objects/psa_Print__c/fields/Consumed_Filament__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Filament__c</fullName>
    <description>Amount of filament consumed</description>
    <inlineHelpText>Enter in the amount of filament used</inlineHelpText>
    <label>Consumed Filament (g)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>