force-app/main/default/objects/psa_Print__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Calculate the cost of a print job</description>
    <formula>Estimated_Filament__c  * (Filament__r.Spool_Cost__c/Filament__r.Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>