force-app/main/default/objects/psa_Print__c/fields/Estimated_Filament__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Filament__c</fullName>
    <description>Estimated amount of filament to be used</description>
    <inlineHelpText>Estimated amount of filament used.</inlineHelpText>
    <label>Estimated Filament (g)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>