force-app/main/default/objects/psa_Print__c/fields/Estimated_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Minutes__c</fullName>
    <description>Estimated minutes for a print</description>
    <label>Estimated Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>