force-app/main/default/objects/psa_Print__c/fields/Estimated_Print_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Print_Time__c</fullName>
    <description>Create a duration for the Print Time</description>
    <formula>Text(Estimated_Hours__c)  &amp; &apos;H&apos; &amp;  Text(Estimated_Minutes__c) &amp; &apos;m&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Print Time</label>
    <type>Text</type>
</CustomField>