force-app/main/default/objects/psa_Print__c/fields/Filament__c.field-meta.xml
<CustomField>
    <fullName>Filament__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Filament</description>
    <label>Filament</label>
    <referenceTo>psa_Filament__c</referenceTo>
    <relationshipLabel>Prints</relationshipLabel>
    <relationshipName>Prints</relationshipName>
    <type>Lookup</type>
</CustomField>