force-app/main/default/objects/psa_Print__c/fields/Model_URL__c.field-meta.xml
<CustomField>
    <fullName>Model_URL__c</fullName>
    <description>URL of the model</description>
    <label>Model URL</label>
    <type>Url</type>
</CustomField>