force-app/main/default/objects/psa_Print__c/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Printer</description>
    <label>Printer</label>
    <referenceTo>psa_Printer__c</referenceTo>
    <relationshipLabel>Prints</relationshipLabel>
    <relationshipName>Prints</relationshipName>
    <type>Lookup</type>
</CustomField>