force-app/main/default/objects/psa_Print__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Master lookup to Project</description>
    <label>Project</label>
    <referenceTo>psa_Project__c</referenceTo>
    <relationshipLabel>Prints</relationshipLabel>
    <relationshipName>Prints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>