force-app/main/default/objects/psa_Print__c/fields/Supports__c.field-meta.xml
<CustomField>
    <fullName>Supports__c</fullName>
    <description>Indicates whether a print needs supports</description>
    <label>Supports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Plate</fullName>
            </value>
            <value>
                <fullName>Enforcers</fullName>
            </value>
            <value>
                <fullName>Everywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>